# remote-mouse

./: README.md  build.sh  start.sh
client/: index.html  main.js  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
mouse-webapp/: .env  index.html  main.js  package-lock.json  package.json
server/: Cargo.toml
server/src/: http_server.rs  main.rs  mouse_controller.rs  websocket_server.rs
