[package]
name = "mouse_control_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-files = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
tokio-tungstenite = "0.24.0"
mouse_position = "0.1"
enigo = "0.2.1"
local-ip-address = "0.6.3"
include_dir = "0.7.4"
mime_guess = "2.0"
mime = "0.3"