[package]
name = "mouse_control_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
enigo = "0.2.1"
futures-util = "0.3"
include_dir = "0.7"
local-ip-address = "0.6.3"
mime_guess = "2.0.5"
mouse_position = "0.1.4"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
qrcode = "0.14.1"
serde_json = "1.0.132"
log = "0.4"
env_logger = "0.11.5"
anyhow = "1.0.92"  # Add this line